exercises/02-deploy-to-aks/automation/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-website
spec:
  type: ClusterIP
  selector:
    app: contoso-website
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # the protocol the SERVICE will listen to
      targetPort: http # port to forward to in the POD
