exercises/02-deploy-to-aks/automation/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.4b846f289a584b079a66.eastus.aksapp.io # which host is allowed to enter the cluster
      http:
        paths:
          - backend: # how the ingress will handle the requests
              service:
                name: contoso-website # which service the request will be forwarded to
                port:
                  name: http # which port in that service
            path: / # which path is this rule referring to
            pathType: Prefix # see more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
